Fixed caption alignment issue

--- a/docroot/sites/all/themes/ambitious/sass/visual.scss
+++ b/docroot/sites/all/themes/ambitious/sass/visual.scss
@@ -13,7 +13,7 @@
 				padding: 70px 0 0;
 				.title{
 					position: relative;
-					right: 50px;
+					right: 10px;
 				}				
 
 			}
